# utopia

./: .gitignore  CMakeLists.txt  LICENSE  conanfile.py
cmake/: CompilerWarnings.cmake  Conan.cmake  StandardProjectSettings.cmake
include/utopia/: bits.h  convert.h  core.h  index_wrapper.h  simple_unicode_buffer.h  unicode_buffer_interface.h  ustring.h  utf_32_string.h  utf_8.h  utopia.h
src/: CMakeLists.txt  simple_unicode_buffer.cpp  utf_32_string.cpp  utopia.cpp
test_package/: CMakeLists.txt  conanfile.py  sanity_check.cpp
tests/unit_tests/: CMakeLists.txt  bits.test.cpp  convert.test.cpp  core.test.cpp  simple_unicode_buffer.test.cpp  utf_32_string.test.cpp
